[package]
name = "funter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
regex = "1"
crossbeam-channel = "0"
num_cpus = "1"

[profile.release]
strip = true
opt-level = "s"
lto = true
panic = "abort"