[package]
name = "funter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
regex = "1"
itertools = "0"
tokio = {version = "1", features = ["full"]}
futures = "0"

[profile.release]
strip = true
opt-level = "s"
lto = true
panic = "abort"